fixing z-index issue on smarthone payable

--- a/app/javascript/application/stylesheets/responsive_smartphone_landscape.css
+++ b/app/javascript/application/stylesheets/responsive_smartphone_landscape.css
@@ -568,6 +568,7 @@
 		width: calc(100% + 10px);
 		margin-left: -5px;
 		height: 48px;
+		z-index: 9;
 		background-color: #2B384E;
 		line-height: 48px;
 		padding-left: 12px;
